--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gouthami-portfolio",
   "version": "0.1.0",
-  "homepage": "https://GouthamiNadella.github.io/your-repo-name",
+  "homepage": "https://GouthamiNadella.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
